src/test/deca/codegen/valid/modulo.deca
// Description:
//   Test du modulo
//
// Resultats:
// ima_output: 0
//

{
    int pair = 31234;
    pair = pair % 2;
    println(pair);
}