src/test/deca/codegen/invalid/modulo_overflow.deca
// Description:
//   Test du reste par 0
//
// Resultats:
//  ima_output: overflow
//

{
    int a = 214 % 0;
}